feat: Creación de modulo hallazgo-remision para el manejo del historial de reasignación de hallazgos udistrital/sisifo_documentacion#855
