# swagger.json
@@ -3024,6 +3024,232 @@
         ]
       }
     },
+    "/hallazgo-remision": {
+      "post": {
+        "operationId": "HallazgoRemisionController_post",
+        "summary": "Crear una nueva remisión de hallazgo",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/HallazgoRemisionDTO"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "La remisión de hallazgo ha sido creada exitosamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HallazgoRemisionDTO"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Solicitud incorrecta."
+          }
+        },
+        "tags": [
+          "hallazgo-remision"
+        ]
+      },
+      "get": {
+        "operationId": "HallazgoRemisionController_getAll",
+        "summary": "Obtener todas las remisiones de hallazgos",
+        "parameters": [
+          {
+            "name": "query",
+            "required": false,
+            "in": "query",
+            "description": " query-Filter.e.g.col1:v1,col2:v2… ",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "fields",
+            "required": false,
+            "in": "query",
+            "description": "fields - Fields returned. e.g. col1,col2 …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortby",
+            "required": false,
+            "in": "query",
+            "description": "sortby - Sorted-by fields. e.g. col1,col2 …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "order",
+            "required": false,
+            "in": "query",
+            "description": "order - Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "limit - Limit the size of result set. Must be an integer",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "offset",
+            "required": false,
+            "in": "query",
+            "description": "offset - Start position of result set. Must be an integer",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "populate",
+            "required": false,
+            "in": "query",
+            "description": "populate - show subqueries. Must be a boolean",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Devuelve todas las remisiones de hallazgos.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HallazgoRemisionDTO"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "hallazgo-remision"
+        ]
+      }
+    },
+    "/hallazgo-remision/{id}": {
+      "get": {
+        "operationId": "HallazgoRemisionController_getById",
+        "summary": "Obtener una remisión de hallazgo por Id",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Devuelve la remisión de hallazgo.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HallazgoRemisionDTO"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Remisión de hallazgo no encontrada."
+          }
+        },
+        "tags": [
+          "hallazgo-remision"
+        ]
+      },
+      "put": {
+        "operationId": "HallazgoRemisionController_put",
+        "summary": "Actualizar una remisión de hallazgo",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/HallazgoRemisionDTO"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "La remisión de hallazgo ha sido actualizada exitosamente.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HallazgoRemisionDTO"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Solicitud incorrecta."
+          },
+          "404": {
+            "description": "Remisión de hallazgo no encontrada."
+          }
+        },
+        "tags": [
+          "hallazgo-remision"
+        ]
+      },
+      "delete": {
+        "operationId": "HallazgoRemisionController_delete",
+        "summary": "Eliminar una remisión de hallazgo",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "La remisión de hallazgo ha sido eliminada exitosamente."
+          },
+          "404": {
+            "description": "Remisión de hallazgo no encontrada."
+          }
+        },
+        "tags": [
+          "hallazgo-remision"
+        ]
+      }
+    },
     "/auditoria-gestion": {
       "post": {
         "operationId": "AuditoriaGestionController_post",
@@ -5995,6 +6221,58 @@
             "description": "Rol del usuario que rechazó el hallazgo"
           }
         }
+      },
+      "HallazgoRemisionDTO": {
+        "type": "object",
+        "properties": {
+          "hallazgo_id": {
+            "$ref": "#/components/schemas/ObjectId"
+          },
+          "dependencia_origen_id": {
+            "type": "number"
+          },
+          "dependencia_destino_id": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "usuario_id": {
+            "type": "number"
+          },
+          "usuario_rol": {
+            "type": "string"
+          },
+          "observacion": {
+            "type": "string"
+          },
+          "estado": {
+            "type": "string"
+          },
+          "activo": {
+            "type": "boolean"
+          },
+          "fecha_creacion": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "fecha_modificacion": {
+            "format": "date-time",
+            "type": "string"
+          }
+        },
+        "required": [
+          "hallazgo_id",
+          "dependencia_origen_id",
+          "dependencia_destino_id",
+          "usuario_id",
+          "usuario_rol",
+          "observacion",
+          "estado",
+          "activo",
+          "fecha_creacion",
+          "fecha_modificacion"
+        ]
       },
       "CreateAuditoriaGestionDto": {
         "type": "object",
